# pep_repo

./: .gitignore  LICENSE  README.md  devDesktop.md  requirements.txt
.github/: CODEOWNERS
docker/: dockerfile
docs/: devDesktop.md
pep_pkg/: CMakeLists.txt
pep_pkg/config/: empty.yaml
pep_pkg/launch/: rsp.launch.py
pep_pkg/models/: gazebo_control.xacro  inertial_macros.xacro
pep_pkg/scripts/: test_subscriber.py
pep_pkg/src/: test_publisher.cpp
pep_pkg/worlds/: empty.world
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: BuoyLocation.msg  DepthSlice.msg
src/interfaces/srv/: GetBuoyLocation.srv
src/pep_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/pep_pkg/launch/: kyle.launch.py  launch_sim.launch.py  rsp.launch.py
src/pep_pkg/models/: robot.urdf.xacro  robot_core.xacro
src/pep_pkg/scripts/: buoy_detection.py  camera.py  camera_stream.py  depth_slice.py  main.py
src/pep_pkg/simulations/boat_description/: CMakeLists.txt  package.xml
src/pep_pkg/simulations/boat_description/Rviz/: rviz.rviz
src/pep_pkg/simulations/boat_description/launch/: display.launch.py  gazebo.launch.py
src/pep_pkg/simulations/boat_description/urdf/: boat.urdf  boat.urdf.xacro
src/pep_sim_pkg/: package.xml  setup.cfg  setup.py
src/pep_sim_pkg/config/: controller.yaml  params_init.yaml  teleop.yaml
src/pep_sim_pkg/launch/: launch_controller.launch.py  launch_sim.launch.py  rsp.launch.py
src/pep_sim_pkg/meshes/: propeller.stl
src/pep_sim_pkg/models/: gazebo_control.xacro  robot_core.xacro
src/pep_sim_pkg/pep_sim_pkg/: pep_teleop.py
